@@ -1,3 +1,3 @@
 #maven.buildNumber.plugin properties file
-#Sun Jan 05 14:27:06 CET 2014
-buildNumber0=2854
+#Mon Jan 06 20:02:26 CET 2014
+buildNumber0=2874
